<resources>
    <string name="app_name">IMDb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login Fragment-->
    <string name="imbd_title">IMDb</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Login</string>
    <string name="login_options_button">You can also sign in with</string>
    <string name="contentdesc_apple_icon">Login with apple account</string>
    <string name="contentdesc_facebook_icon">Login with facebook account</string>
    <string name="contentdesc_google_icon">Login with google account</string>
    <string name="question_registration_option">Don\'t you have an account? <b><font color="@color/black"><i>Sign in!</i></font></b></string>
    <string name="guest_option">Continue as guest</string>
    <string name="login_success_signin">Sign In Successful!</string>
    <string name="login_error_signin">There was a problem signing you in…</string>

    <!--Registration Fragment-->
    <string name="back_arrow">Back arrow</string>
    <string name="contentdesc_imdb_logo">IMDB logo</string>
    <string name="create_account_label">Create an account</string>
    <string name="username_input">Username</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="password_suggestion">Password should have at least 8 characters</string>
    <string name="accept_registration_button">Accept</string>
    <string name="reg_success_signup">Sign Up Successful!</string>
    <string name="reg_error_signup">There was a problem signing you up…</string>

    <!--Home Fragment-->
    <string name="home_icon_bnv">Home</string>
    <string name="play_icon_bnv">Play</string>
    <string name="profile_icon_bnv">Profile</string>

    <!--Search Fragment-->
    <string name="search_icon_bnv">Search</string>
    <string name="search_query_hint">Search IMDb</string>

    <!--Details Fragment-->
    <string name="movie_title_details">Movie Title</string>
    <string name="contentdesc_back_arrow_details">Back to search movies</string>
    <string name="contentdesc_play_movie_details">Play Movie</string>
    <string name="contentdesc_movie_placeholder_details">Movie placeholder</string>
    <string name="contentdesc_rating">Rating</string>
    <string name="contentdesc_movieimage_details">Movie Poster</string>
    <string name="contentdesc_forwardarrow_details">Check Episodes</string>
    <string name="movie_bigtitle_details">Movie Big Title</string>
    <string name="movie_original_title">Original title</string>
    <string name="movie_popularity_details">120.000</string>
    <string name="movie_voteavg_details">5.0</string>
    <string name="movie_overview_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="episode_details">Episode guide</string>
    <string name="list_of_episodes_details">Episodes</string>
    <string name="watch_list_button">Add to my watch list</string>
    <string name="recommended_movies_title">Recommended movies</string>

    <!--Home Fragment-->
    <string name="contentDesc_most_popular_movie">Most popular movie</string>
    <string name="contentDesc_play_most_popular">Play most popular movie</string>
    <string name="most_popular_movietitle">Most popular movie title</string>
    <string name="most_popular_title">Most popular</string>
    <string name="top_rated_title">Top Rated</string>

    <!--Profile Fragment-->
    <string name="user_name_title">Username</string>
    <string name="contentDest_username_pic">Username picture</string>
    <string name="watchlist_title">Watch list</string>
    <string name="watchlist_description">Create a watch list so you don\'t miss any movie or tv series!</string>
    <string name="create_watchlist_button">start watch list</string>
    <string name="recent_watch_title">Recently watched</string>
    <string name="recent_watch_description">You haven\'t visit any page recently</string>

    <!--Movie Search Item Layout-->
    <string name="movie_name">Movie name</string>
    <string name="movie_year">2023</string>
    <string name="movie_popularity">Score: %1$s</string>
    <string name="contentdesc_movie_image">movie poster</string>

    <!--Most popular movie item Layout-->
    <string name="most_popular_movie_name">Movie name</string>
    <string name="most_popular_movie_voteavg">0.0</string>

</resources>