<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="movieData"
            type="com.globant.imdb.model.searchFragment.SearchMovieViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.home.search.DetailsFragment">

            <View
                android:id="@+id/title_bullet_line"
                app:layout_constraintBottom_toBottomOf="@+id/movie_bigtitle_details"
                app:layout_constraintEnd_toStartOf="@+id/movie_bigtitle_details"
                app:layout_constraintTop_toTopOf="@+id/movie_bigtitle_details"
                style="@style/vertical_bullet" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_to_search_movies" />

            <ImageView
                android:id="@+id/back_to_search_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/contentdesc_back_arrow_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/movie_title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@{movieData.clickedMovie.title}"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_to_search_movies"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_to_search_movies"
                tools:text="@string/movie_title_details" />

            <TextView
                android:id="@+id/movie_bigtitle_details"
                android:text="@{movieData.clickedMovie.title}"
                tools:text="@string/movie_bigtitle_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                style="@style/imdb_big_title" />

            <TextView
                android:id="@+id/movie_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@{movieData.clickedMovie.originalTitle}"
                tools:text="@string/movie_original_title"
                app:layout_constraintStart_toStartOf="@+id/movie_bigtitle_details"
                app:layout_constraintTop_toBottomOf="@+id/movie_bigtitle_details" />

            <TextView
                android:id="@+id/movie_popularity_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                app:appendPopularity="@{movieData.clickedMovie.popularity}"
                tools:text="@string/movie_popularity_details"
                app:layout_constraintStart_toStartOf="@+id/movie_original_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_original_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movieLayout"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_popularity_details">

                <ImageView
                    android:id="@+id/movie_placeholder"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/contentdesc_movie_placeholder_details"
                    app:movieImage="@{movieData.clickedMovie.posterPath}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/placeholder_movie" />

                <ImageView
                    android:id="@+id/play_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/contentdesc_play_movie_details"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/movie_placeholder"
                    app:layout_constraintStart_toStartOf="@+id/movie_placeholder"
                    app:layout_constraintTop_toTopOf="@+id/movie_placeholder"
                    app:srcCompat="@drawable/baseline_play_circle_outline_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/movie_details_image"
                android:layout_width="90dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:contentDescription="@string/contentdesc_movieimage_details"
                app:movieImage="@{movieData.clickedMovie.posterPath}"
                app:layout_constraintBottom_toBottomOf="@+id/movie_overview_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rating_image"
                app:srcCompat="@drawable/baseline_movie_filter_24" />

            <ImageView
                android:id="@+id/rating_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="132dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/contentdesc_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieLayout"
                app:srcCompat="@drawable/baseline_star_rate_24" />

            <TextView
                android:id="@+id/movie_details_voteavg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                app:appendVoteAverage="@{movieData.clickedMovie.voteAverage}"
                tools:text="@string/movie_voteavg_details"
                app:layout_constraintBottom_toBottomOf="@+id/rating_image"
                app:layout_constraintStart_toEndOf="@+id/rating_image"
                app:layout_constraintTop_toTopOf="@+id/rating_image" />

            <TextView
                android:id="@+id/movie_overview_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@{movieData.clickedMovie.overview}"
                tools:text="@string/movie_overview_details"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rating_image"
                app:layout_constraintTop_toBottomOf="@+id/rating_image" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview_details" />

            <TextView
                android:id="@+id/episodes_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/episode_details"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/list_of_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/list_of_episodes_details"
                app:layout_constraintBottom_toBottomOf="@+id/select_arrow"
                app:layout_constraintEnd_toStartOf="@+id/select_arrow"
                app:layout_constraintTop_toTopOf="@+id/select_arrow" />

            <ImageView
                android:id="@+id/select_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:constraint_referenced_tags="@string/contentdesc_forwardarrow_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/episodes_details" />

            <Button
                android:id="@+id/watch_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/imdb_yellow"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:text="@string/watch_list_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <View
                android:id="@+id/divider8"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_marginTop="21dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/watch_list_button" />

            <TextView
                android:id="@+id/textView"
                style="@style/imdb_big_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/recommended_movies_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider8" />

            <View
                android:id="@+id/divider9"
                style="@style/vertical_bullet"
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_divider"
                android:backgroundTint="@color/imdb_yellow"
                android:backgroundTintMode="add"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommended_movies_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
